--- a/GameData/PJ2ARC/Spoilers/SelectableSpoilers.cfg
+++ b/GameData/PJ2ARC/Spoilers/SelectableSpoilers.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:FOR[PJ2ARC]:HAS[@PJ2ARC_Settings:HAS[#SelectableSpoilers[true]]]
+@Kopernicus:HAS[@PJ2ARC_Settings:HAS[#SelectableSpoilers[true]]]:FOR[PJ2ARC]
 {
 	@Body[PJ2Settings]
 	{
