--- a/GameData/PJ2ARC/settings.cfg
+++ b/GameData/PJ2ARC/settings.cfg
@@ -1,24 +1,33 @@
-@Kopernicus:BEFORE[PJ2ARC]
+PJ2ARC_Settings
 {
-	%PJ2ARC_Settings
-	{
-		OlloDensityFix = true			// Increase masses in the Ollo and Hadfield systems by 10 to correct scale error.
+	OynagAtmospheres = true
+	// Raises atmospheres in the Oynag-Descry system so that they scale more realistically.
+	// Viszra: total height 151 km, surface scale height 15.4 km
+	// Jejunum: total height 86 km, surface scale height 15.6 km
+	// Cricoid: total height 147 km, surface scale height 35.6 km, average temperature 74 K
+	// Zeppeli: total height 91 km, surface scale height 11.2 km
 
-		AsteroidDensityFix = true  		// Mass changes to fix densities for Phe, Ber, Rangon (x100), Phomos (x160), Blitzø (x0.1).
+	Scatterer = true
+	// Change the Scatterer scale heights to reflect the new atmospheres.
 
-		OynagAtmosphereFix = true		// Increase atmosphereMolarMass at Vizra, Jejunum, Cricoid, Zeppeli to
-								// ~0.028 (nitrogen, with small variations depending on the ocean material).
+	IlmarOxygen = true
+	// Gives Ilmar's atmosphere oxygen to match its Tracking Station description.
 
-		OceanDensityFix = true			// Change the density of Jejunum's ocean to 3.1 g/cm^3 (lava; it's too hot to be liquid methane).
+	ViszraDensity = true
+	// Increases Viszra's mass to 0.0378 kEarths (density 2.8 g/cm^3), representing low amounts of internal ice.
+	// Highly recommended if using the raised atmosphere, or the scale heights won't actually be realistic.
+	// Surface gravity 0.2139 g, SOI 556 km (= altitude 288 km)
 
-		BeddulDopaleAtmospheres = true     	// New atmospheres for Beddul and Dopale that scale realistically.
-								// Similar surface conditions, but pressure drops more quickly. Beddul ends at 73 km and Dopale at 63 km.
+	JonesTemperature = true
+	// Increases Jones's atmospheric temperature to 100 K to match its Tracking Station description.
 
-		JonesOverhaul = false			// Jones: radius x10, surface gravity x1, terrain altitude x4, atmosphere height 19 km.
-								// More details in Jones.cfg.
-
-		SelectableSpoilers = false		// Only set to true if you have found ??, ???, and ????.
-								// Makes these bodies selectable in map view so that you can find them again without too much difficulty.									
-
-	}
+	TobalkAtmosphere = true
+	// Gives Tobalk a thin atmosphere.
+	// 41% H2, 37% N2, 22% He
+	// 25 km height, 1.78 km surface scale height
+	// 3 atm at datum level, but thins out very quickly and ends below the highest mountain.
+}
+@Kopernicus:BEFORE[PJ2ARC]:HAS[!PJ2ARC_Settings]
+{
+	#@PJ2ARC_Settings {}
 }
